--- a/UwbProjekt-Angular/package.json
+++ b/UwbProjekt-Angular/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -17,7 +17,6 @@
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.1.3",
     "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.1.3",
     "@angular/platform-browser": "^5.1.3",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
