--- a/UwbProjekt-Angular/package.json
+++ b/UwbProjekt-Angular/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "bootstrap": "^3.3.7",
+    "bulma": "^0.6.2",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "ngx-bootstrap": "^2.0.0-rc.0",
