--- a/UwbProjekt-Angular/package.json
+++ b/UwbProjekt-Angular/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
+    "@angular/animations": "^5.2.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.1.3",
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "ngx-bootstrap": "^2.0.0-rc.0",
+    "ngx-toastr": "^8.1.0",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
