--- a/UwbProjekt-Angular/package.json
+++ b/UwbProjekt-Angular/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
     "ngx-bootstrap": "^2.0.0-rc.0",
+    "ngx-pagination": "^3.0.3",
     "ngx-toastr": "^8.1.0",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
