--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database Properties
 
-#spring.jpa.hibernate.ddl-auto=create
+s#pring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/clinic
 spring.datasource.username=admin
 spring.datasource.password=admin
